--- a/packages/aws-amplify/example.html
+++ b/packages/aws-amplify/example.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="dist/aws-amplify-analytics.js"></script>
+        <script src="vendor/aws-sdk-2.224.1.min.js"></script>
     </head>
 
     <body>
         <script>
-            console.log(window['aws-amplify']);
+            console.log(window);
             </script>
         <p>hello world</p>
     </body>
